# electricity_price_forecast

./: README.md
myproject/: pyproject.toml  requirements.txt
myproject/myproject/: app.py  forecast_eval.py  get_jepx_data.ipynb  home.py  hyper_params.py  lightgbm.ipynb  requirements.txt  spot_forecast.py  spot_latest.py  spot_model_builder.py
myproject/myproject/data/jepx/: spot_summary_2022.csv  spot_summary_2023.csv  spot_summary_2025.csv
myproject/myproject/docs/ML/: spot_summary_2024.csv  spot_summary_2025.csv
myproject/myproject/models/: lightgbm.ipynb  models.ipynb  models_Rev1.ipynb
myproject/myproject/models/artifacts/: LightGBM_params.parquet  df_mae_results.parquet  df_rmse_results.parquet
myproject/myproject/models/models_XGBoost/: xgboost_中国.json  xgboost_中部.json  xgboost_九州.json  xgboost_北海道.json  xgboost_北陸.json  xgboost_四国.json  xgboost_東京.json  xgboost_東北.json  xgboost_関西.json
