[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "palakpaneerer",email = "dinho.mako@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "holidays (>=0.79,<0.80)",
    "datetime (>=5.5,<6.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "japanize-matplotlib (>=1.1.3,<2.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
